# GFXR_plugins

./: .gitmodules
android/: settings.gradle
android/perfetto/capture/: CMakeLists.txt
android/perfetto/capture/src/main/: AndroidManifest.xml
android/perfetto/replay/: CMakeLists.txt
android/perfetto/replay/src/main/: AndroidManifest.xml
perfetto/: CMakeLists.txt  perfetto_tracing_categories.cpp  perfetto_tracing_categories.h
perfetto/capture/: CMakeLists.txt  perfetto_capture_commands.cpp  perfetto_capture_commands.h  perfetto_encoder_commands.cpp  perfetto_entrypoints_post.cpp  perfetto_entrypoints_pre.cpp
perfetto/replay/: CMakeLists.txt  perfetto_entrypoints_general.cpp  perfetto_entrypoints_pre.cpp  perfetto_replay_commands.cpp  perfetto_replay_commands.h
